    - Removed the amount indication on machines and fuels in the machine dialog
  Bugfixes:
    - Fixed a bug where module effects were not updated straight away when changing a machine or beacon type
    - Fixed that putting top level ingredients into the cursor would not respect the 'show floor items' preference
    - Fixed that machine energy drain was generating pollution when it shouldn't be
    - Fixed that certain Exotic Industries recipes would not be usable until researched
    - Fixed duplicate machines being detected in Industrial Revolution 3

---------------------------------------------------------------------------------------------------
Version: 1.1.62
Date: 27. 04. 2023
  Bugfixes:
    - Fixed that specifying amounts on top level ingredients was disabled when the matrix solver was enabled
    - Fixed a crash when selecting a specific nexelit recipe from PyMods
    - Fixed that the tutorial mode toggle was always re-activated during migration
    - Fixed that repairing a machine with invalid fuel would not work properly
    - Fixed that a couple of strings could not be localised

---------------------------------------------------------------------------------------------------
Version: 1.1.61
Date: 05. 04. 2023
  Features:
    - Added hotkeys to go up a floor (Alt + Up) and to the top floor (Shift + Alt + Up)
    - Implemented paste functionality for machine fuel
  Changes:
    - Added Ukranian translation (Thanks Met en Bouldry!)
    - Changed the ingredient combinator button to use a sprite instead of text
  Bugfixes:
    - Fixed that absurdly high module effects were not being capped correctly at the engine limit of +32767%
    - Fixed a few inconsistencies around raw ores and made them more visually distinct
    - Fixed an issue where the centering of modal dialogs didn't work in all cases anymore

---------------------------------------------------------------------------------------------------
Version: 1.1.60
Date: 31. 12. 2022
  Changes: