@@ -9,6 +9,7 @@ Date: 00. 00. 0000
     - Fixed a bug where module effects were not updated straight away when changing a machine or beacon type
     - Fixed that putting top level ingredients into the cursor would not respect the 'show floor items' preference
     - Fixed that machine energy drain was generating pollution when it shouldn't be
+    - Fixed that a recipe's priority product was not always retained properly
     - Fixed that certain Exotic Industries recipes would not be usable until researched
     - Fixed duplicate machines being detected in Industrial Revolution 3
 
